syntax = "proto3";
option go_package = "./;proto";
package proto;

enum TodoStatus {
    OPEN = 0;
    IN_PROGRESS = 1;
    CLOSED = 2;
    RESOLVED = 3;
  }

message CreateTodoRequest {
    string title = 1;
    string description = 2;
    TodoStatus status = 3;
    string token = 4;
}

message CreateTodoResponse {
    bool success = 1;
    int64 todoId = 2;
}

message GetTodoRequest {
    int64 todoId = 1;
}

message GetTodoResponse {
    string title = 1;
    string description = 2;
    TodoStatus status = 3;
}

message UpdateTodoRequest {
    string title = 1;
    string description = 2;
    TodoStatus status = 3;
    int64 todoId = 4;
    string token = 5;
}

message UpdateTodoResponse {
    bool success = 1;
}

message DeleteTodoRequest {
    int64 todoId = 1;
    string token = 2;
}

message DeleteTodoResponse {
    bool success = 1;
}

// Define Todo Service
service TodoService {
    rpc CreateTodo (CreateTodoRequest) returns (CreateTodoResponse);
    rpc GetTodo (GetTodoRequest) returns (GetTodoResponse);
    rpc UpdateTodo (UpdateTodoRequest) returns (UpdateTodoResponse);
    rpc DeleteTodo (DeleteTodoRequest) returns (DeleteTodoResponse);
}